# rust-sorting-algs

./: Cargo.toml
benches/: my_benchmark.rs
src/: bubblesort.rs  insertionsort.rs  lib.rs
