[package]
authors = ["Oliver Burt <oliburt@gmail.com>"]
edition = "2018"
name = "orst"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
pretty_assertions = "0.4.0"
rand = "0.8.0"

[[bench]]
harness = false
name = "my_benchmark"

[lib]
bench = false
